bump LangChain4j version and make Jlama to work in dev mode